detting up project db and repositories

--- a/SelahSeries/appsettings.json
+++ b/SelahSeries/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "SelahSeriesDB": "Server=LAITNEE\\SQLEXPRESS;Database=SelahSeries;Integrated Security=SSPI;persist security info=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
