--- a/SelahSeries/SelahSeries.csproj
+++ b/SelahSeries/SelahSeries.csproj
@@ -124,4 +124,10 @@
     <Folder Include="wwwroot\Uploads\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="Views\Blog\post - Copy.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
+  </ItemGroup>
+
 </Project>
