--- a/SelahSeries/appsettings.json
+++ b/SelahSeries/appsettings.json
@@ -2,10 +2,19 @@
     "ConnectionStrings": {
         "SelahSeriesDB": "Server=DESKTOP-7M6BQTI\\SQLEXPRESS;Database=SelahSeries;Integrated Security=SSPI;persist security info=True;"
     },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    //SMTP settings
+    "Email": {
+        "Email": "lois0168@gmail.com",
+        "Password": "password12@",
+        "Host": "smtp.gmail.com",
+        "Port": "587"
     }
-  },
-  "AllowedHosts": "*"
 }
+
+
