post section good

--- a/SelahSeries/appsettings.Development.json
+++ b/SelahSeries/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "__SelahSeriesDB": "Server=LAITNEE\\SQLEXPRESS;Database=SelahSeries;Integrated Security=SSPI;persist security info=True;"
+    "SelahSeriesDB": "Server=LAITNEE\\SQLEXPRESS;Database=SelahSeries;Integrated Security=SSPI;persist security info=True;"
   },
   "Logging": {
     "LogLevel": {
