removed email details

--- a/SelahSeries/appsettings.json
+++ b/SelahSeries/appsettings.json
@@ -10,8 +10,8 @@
     "AllowedHosts": "*",
     //SMTP settings
     "Email": {
-        "Email": "lois0168@gmail.com",
-        "Password": "password12@",
+        "Email": "#########",
+        "Password": "#########",
         "Host": "smtp.gmail.com",
         "Port": "587"
     }
