--- a/SelahSeries/appsettings.json
+++ b/SelahSeries/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "__SelahSeriesDB": "Server=209.205.214.74;Database=selahser_SelahDB;user id=selahseries;password=23sP@KC!Hsu46w"
+    "_SelahSeriesDB": "Server=209.205.214.74;Database=selahser_SelahDB;user id=selahseries;password=23sP@KC!Hsu46w"
   },
   "Logging": {
     "LogLevel": {
