--- a/SelahSeries/appsettings.json
+++ b/SelahSeries/appsettings.json
@@ -1,7 +1,7 @@
 {
-  "ConnectionStrings": {
-    "SelahSeriesDB": "Server=209.205.214.74;Database=selahser_BloomDB;user id=selahseries;password=23sP@KC!Hsu46w"
-  },
+    "ConnectionStrings": {
+        "SelahSeriesDB": "Server=DESKTOP-7M6BQTI\\SQLEXPRESS;Database=SelahSeries;Integrated Security=SSPI;persist security info=True;"
+    },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
