--- a/SelahSeries/appsettings.json
+++ b/SelahSeries/appsettings.json
@@ -13,6 +13,10 @@
       "LoginEmail": "idowuolatunji3@gmail.com"
     }
   },
+  "Facebook": {
+    "ClientId": "260384328359478",
+    "ClientSecret": "e5e5e46a9a6c478576e2f1cb44c6bdea"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
