--- a/SelahSeries/appsettings.json
+++ b/SelahSeries/appsettings.json
@@ -17,6 +17,12 @@
     "ClientId": "260384328359478",
     "ClientSecret": "e5e5e46a9a6c478576e2f1cb44c6bdea"
   },
+  "Email": {
+    "Email": "tunji@selahseries.com",
+    "Password": "91I$ef2s",
+    "Host": "webmail.selahseries.com",
+    "Port": "25"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
