--- a/SelahSeries/appsettings.Development.json
+++ b/SelahSeries/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "_SelahSeriesDB": "Server=DESKTOP-7M6BQTI\\SQLEXPRESS;Database=SelahSeries;Integrated Security=SSPI;persist security info=True;"
+        "_SelahSeriesDB": "DESKTOP-J6EST97\\SQLEXPRESS;Database=SelahSeries;Integrated Security=SSPI;persist security info=True;"
     },
   "Logging": {
     "LogLevel": {
