payment gateway and social medialinks

--- a/SelahSeries/appsettings.json
+++ b/SelahSeries/appsettings.json
@@ -18,8 +18,8 @@
     "ClientSecret": "e5e5e46a9a6c478576e2f1cb44c6bdea"
   },
   "Email": {
-    "Email": "tunji@selahseries.com",
-    "Password": "91I$ef2s",
+    "Email": "connect@selahseries.com",
+    "Password": "ybD3r?26",
     "Host": "webmail.selahseries.com",
     "Port": "25"
   },
