--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,7 @@ bld/
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
-
+appsettings*.json
 # MSTest test Results
 [Tt]est[Rr]esult*/
 [Bb]uild[Ll]og.*
@@ -44,6 +44,8 @@ dlldata.c
 project.lock.json
 project.fragment.lock.json
 artifacts/
+
+
 
 *_i.c
 *_p.c
