--- a/SelahSeries/Properties/launchSettings.json
+++ b/SelahSeries/Properties/launchSettings.json
@@ -1,7 +1,11 @@
-﻿{
+{
   "iisSettings": {
-    "windowsAuthentication": false, 
-    "anonymousAuthentication": true, 
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
+    "iis": {
+      "applicationUrl": "http://localhost/SelahSeries",
+      "sslPort": 0
+    },
     "iisExpress": {
       "applicationUrl": "http://localhost:49899",
       "sslPort": 44329
@@ -9,19 +13,20 @@
   },
   "profiles": {
     "IIS Express": {
-      "commandName": "IISExpress",
+      "commandName": "IIS",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "CONNECTION_STRING": "Server=209.205.214.74;Database=selahser_BloomDB;user id=selahseries;password=3Rx3fx#0",
+        "ASPNETCORE_ENVIRONMENT": "Production"
       }
     },
     "SelahSeries": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+        "ASPNETCORE_ENVIRONMENT": "Production"
+      },
+      "applicationUrl": "https://localhost:5001;http://localhost:5000"
     }
   }
 }
