--- a/SelahSeries/Properties/launchSettings.json
+++ b/SelahSeries/Properties/launchSettings.json
@@ -24,7 +24,7 @@
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Production"
+        "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl": "https://localhost:5001;http://localhost:5000"
     }
