--- a/SelahSeries/appsettings.json
+++ b/SelahSeries/appsettings.json
@@ -17,11 +17,17 @@
         "ClientId": "260384328359478",
         "ClientSecret": "e5e5e46a9a6c478576e2f1cb44c6bdea"
     },
+    //"Email": {
+    //    "Email": "connect@selahseries.com",
+    //    "Password": "ybD3r?26",
+    //    "Host": "webmail.selahseries.com",
+    //    "Port": "25"
+    //},
     "Email": {
-        "Email": "connect@selahseries.com",
-        "Password": "ybD3r?26",
-        "Host": "webmail.selahseries.com",
-        "Port": "25"
+        "Email": "lois0168@gmail.com",
+        "Password": "password12@",
+        "Host": "smtp.gmail.com",
+        "Port": "587"
     },
     "Logging": {
         "LogLevel": {
