--- a/.gitignore
+++ b/.gitignore
@@ -260,6 +260,5 @@ paket-files/
 __pycache__/
 *.pyc
 
-*appsettings.json
-*appsettings.Development.json
-*appsettings.json~payment gateway and social medialinks
+appsettings.json
+appsettings.Development.json
